finsished blog page and logic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
-<body>
+<body class="container">
     <header class="light">
         <button id="lightMode">☀️</button>
     </header>
@@ -23,7 +23,7 @@
         <section class="right">
             <div id="form">
                 <h2>What's on your mind</h2>
-                <form action="">
+                <form action="./blog.html">
                     <p>Username</p>
                     <input type="text" id="username">
                     <p>Title</p>
